# klogger

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: active.hpp  logger.cpp  logger.hpp  main.cpp  time.hpp
